--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Update Filter Lists
 
 on:
   schedule:
-    - cron: "* 0,6,12,18 * * *"
+    - cron: "0 3 * * 1"
   push:
     branches:
       - main
