--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Update Filter Lists
 
 on:
   schedule:
-    - cron: "* 0,12 * * *"
+    - cron: "1 10,22 * * *"
   push:
     branches:
       - main
